# python-xero-minimal

./: .gitignore  LICENSE  README.md  pyproject.toml  xero.py
